Bug 508539 - Day view not displaying times, and Week view displaying Day view.
Summary: Day view not displaying times, and Week view displaying Day view.
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: otherviews (other bugs)
Version First Reported In: 6.5.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-20 22:46 UTC by Peter
Modified: 2025-08-27 13:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.1
Sentry Crash Report:


Attachments
Screenshot showing Korganizer Day view (113.77 KB, image/png)
2025-08-20 22:46 UTC, Peter
Details
Screenshot of KOrganizer Week view (756.40 KB, image/png)
2025-08-21 20:45 UTC, Peter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Peter 2025-08-20 22:46:40 UTC
Created attachment 184303 [details]
Screenshot showing Korganizer Day view

SUMMARY
(1) Day view no longer displays times, and 
(2) Can't select Week view.

STEPS TO REPRODUCE
1. Open Korganizer. 
2. Attempt to select Week view or select Month view and then select Week view.   

OBSERVED RESULT
(1) Day view doesn't display any event times (see screenshot)
(2) Selecting Week view displays Day view. 

EXPECTED RESULT
(1) Day view should show event times
(2) Week view should be displayed when selected.  

SOFTWARE/OS VERSIONS
Operating System: KDE neon User Edition
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Kernel Version: 6.14.0-28-generic (64-bit)
Graphics Platform: Wayland
Processors: 8 × 11th Gen Intel® Core™ i5-1135G7 @ 2.40GHz
Memory: 8 GiB of RAM (7.5 GiB usable)
Graphics Processor: Intel® Iris® Xe Graphics
Manufacturer: Dell Inc.
Product Name: XPS 13 9305

ADDITIONAL INFORMATION
This problem is relatively recent, although I can't recall whether it predates 6.5.0.
Comment 1 Peter 2025-08-21 20:45:27 UTC
Created attachment 184323 [details]
Screenshot of KOrganizer Week view

Also, I sometimes get a Week view, but without any times or lines dividing the days.  (See screenshot.)
Comment 2 Allen Winter 2025-08-22 11:52:26 UTC
please try selecting the Day or Week views from the Agenda button menu and see if that helps at all
Comment 3 Peter 2025-08-25 09:59:23 UTC
Hi Allen, 

Thank you for your suggestion.  I may have narrowed down the problem, though.  It seems I didn't have any calendars selected (not sure how that happened).   If I select one or more calendars then the behaviour is (as far as I can tell) normal.  However, if I unselect all the calendars and then close and re-open KOrganizer then the behaviour I described happens again.  

Clearly, the workaround is to have at least one calendar selected.  The behaviour without is a bit strange, though.  

Thanks and regards

P
Comment 4 Bug Janitor Service 2025-08-27 13:12:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/eventviews/-/merge_requests/174
Comment 5 Allen Winter 2025-08-27 13:18:50 UTC
Git commit 6655252c3b23390a1008d623bdd77dc86c8dc3e3 by Allen Winter.
Committed on 27/08/2025 at 13:06.
Pushed by winterz into branch 'master'.

In Agenda View: show grid and timelabels even without calendars

In Agenda View with no calendars enabled the grid are now shown.
Previously, without calendars the timelabels and grid were not drawn.

M  +0    -4    src/agenda/agendaview.cpp
M  +2    -2    src/agenda/timelabels.cpp

https://invent.kde.org/pim/eventviews/-/commit/6655252c3b23390a1008d623bdd77dc86c8dc3e3
Comment 6 Allen Winter 2025-08-27 13:18:59 UTC
Git commit adc4f631e0c57e5e50b9195f7b9bd7696444fbae by Allen Winter.
Committed on 27/08/2025 at 13:18.
Pushed by winterz into branch 'release/25.08'.

In Agenda View: show grid and timelabels even without calendars

In Agenda View with no calendars enabled the grid are now shown.
Previously, without calendars the timelabels and grid were not drawn.


(cherry picked from commit 6655252c3b23390a1008d623bdd77dc86c8dc3e3)

Co-authored-by: Allen Winter <winter@kde.org>

M  +0    -4    src/agenda/agendaview.cpp
M  +2    -2    src/agenda/timelabels.cpp

https://invent.kde.org/pim/eventviews/-/commit/adc4f631e0c57e5e50b9195f7b9bd7696444fbae