In Agenda View: show grid and timelabels even without calendars

In Agenda View with no calendars enabled the grid are now shown.
Previously, without calendars the timelabels and grid were not drawn.

BUG: 508539